Enable annotation processors in JDK 22 (#302)
* enable processors in JDK 22

* Update README.md

* Update README.md

* Update pom.xml

* dependabot

* Update dependabot-merge.yml

* Update pom.xml

---------

Co-authored-by: Rob Bygrave <130515035+rob-bygrave@users.noreply.github.com>